@@ -41,6 +41,8 @@ Improvements::
 
 Bug Fixes::
 
+* don't drop text on line above inline image macro in running content value (#2495)
+* when looking for a value that only contains an image macro, match the whole string instead of per line (#2495)
 * don't warn about missing character in fallback font when inline image is advanced to next page (#2492)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
